Further alloy with GitPages

--- a/Kittens/assets/css/style.css
+++ b/Kittens/assets/css/style.css
@@ -128,7 +128,7 @@
 }
 
 #ready {
-    background: no-repeat center / 100% url("./Kittens/images/starry1.jpeg");
+    background: no-repeat center / 100% url("../images/starry1.jpeg");
 }
 
 .animated-invitation {
