--- a/Kittens/assets/css/style.css
+++ b/Kittens/assets/css/style.css
@@ -52,7 +52,7 @@
 #main>section {
     scroll-snap-align: start;
     position: relative;
-    
+
     z-index: 0;
 }
 
@@ -75,6 +75,16 @@
 #main .initial-section {
     height: 100vh;
     z-index: 2;
+}
+
+
+#ready {
+    background: no-repeat center / 100% url("../images/starry1.jpeg");
+}
+
+#support {
+    background-color: white !important;
+    border: 1px solid rgba(198, 188, 218, 1);
 }
 
 .info-section::-webkit-scrollbar {
@@ -125,10 +135,6 @@
     border-radius: 10px;
     transition-property: border-radius;
     transition-duration: 0.5s;
-}
-
-#ready {
-    background: no-repeat center / 100% url("../images/starry1.jpeg");
 }
 
 .animated-invitation {
@@ -271,64 +277,69 @@
     flex-grow: 1;
 }
 
- 
- /* Blockquote main style */
- #kharon .blockquote {
+
+/* Blockquote main style */
+#kharon .blockquote {
     --quote-color: #446a75;
- }
- #persival .blockquote {
+}
+
+#persival .blockquote {
     --quote-color: #715156;
- }
- #grizli .blockquote {
+}
+
+#grizli .blockquote {
     --quote-color: #4b584d;
- }
- #emergency .blockquote {
+}
+
+#emergency .blockquote {
     --quote-color: #4e7068;
- }
- #cassiopeia .blockquote {
+}
+
+#cassiopeia .blockquote {
     --quote-color: #634d5c;
- }
+}
 
- .blockquote {
-     position: relative;
-     font-family: 'Yeseva One', cursive;
-     max-width: 620px;
+.blockquote {
+    position: relative;
+    font-family: 'Yeseva One', cursive;
+    max-width: 620px;
 
-     max-height: 80%;
-     overflow-y: auto;
- }
+    max-height: 80%;
+    overflow-y: auto;
+}
 
- .blockquote::-webkit-scrollbar{
+.blockquote::-webkit-scrollbar {
     display: none;
- }
- 
- /* Blockquote header */
- .blockquote h1 {
-     position: relative; /* for pseudos */
-     color: var(--quote-color);
-     font-weight: normal;
-     margin: 0;
+}
 
-     padding: 2rem 3rem;
+/* Blockquote header */
+.blockquote h1 {
+    position: relative;
+    /* for pseudos */
+    color: var(--quote-color);
+    font-weight: normal;
+    margin: 0;
 
-     text-align: justify;
- }
- 
- /* Blockquote subheader */
- .blockquote h4 {
-     position: relative;
-     color: #ffffff;
-     font-size: 1.3rem;
-     font-weight: 400;
-     line-height: 1.2;
-     margin: 0;
-     padding-top: 15px;
-     z-index: 1;
-     margin-left:150px;
-     padding-left:12px;
- }
- 
-  
- .blockquote h4:first-letter {
-   margin-left:-12px;
- }
+    padding: 2rem 3rem;
+
+    text-align: justify;
+}
+
+/* Blockquote subheader */
+.blockquote h4 {
+    position: relative;
+    color: #ffffff;
+    font-size: 1.3rem;
+    font-weight: 400;
+    line-height: 1.2;
+    margin: 0;
+    padding-top: 15px;
+    z-index: 1;
+    margin-left: 150px;
+    padding-left: 12px;
+}
+
+
+.blockquote h4:first-letter {
+    margin-left: -12px;
+}
